--- a/stylesheet/stylesheet.sass
+++ b/stylesheet/stylesheet.sass
@@ -8,7 +8,7 @@ body, html
 		position: absolute
 		width: 100%
 		height: 100vh	
-		background-image: url('../assests/images/vincent-full-frame.jpg')
+		background-image: url('../assests/images/vincent-full-frame.png')
 		background-position: center
 		background-size: cover
 		display: flex
