--- a/stylesheet/stylesheet.sass
+++ b/stylesheet/stylesheet.sass
@@ -51,6 +51,14 @@ body, html
 			display: flex
 			flex-direction: column
 			align-items: center
+			position: relative
+			.fade-out
+				width: 90%
+				position: fixed
+				top: 0
+				height: 20%
+				background-image: linear-gradient(to top, transparent, #ffffff);
+
 			.info-container
 				position: relative
 				height: 40vh
@@ -79,7 +87,7 @@ body, html
 					
 					
 
-@media screen and (max-width: 450px)
+@media screen and (max-width: 800px)
 	html .main-container .content-container .info-container 
 		height: 0
 	html .main-container .content-container .info-container .description
