--- a/stylesheet/stylesheet.sass
+++ b/stylesheet/stylesheet.sass
@@ -88,13 +88,14 @@ body, html
 					
 
 @media screen and (max-width: 800px)
-	html .main-container .content-container .info-container 
-		height: 0
+
 	html .main-container .content-container .info-container .description
-		display: none
+		position: relative
+		width: 80%
 	html .main-container .content-container .paintings
 		flex-direction: column
+		align-items: flex-end
+		padding-right: 10px
 		
 	html .main-container .content-container .paintings .column
-		width: 90%
-		text-align: center
+		width: 80%
