--- a/stylesheet/stylesheet.sass
+++ b/stylesheet/stylesheet.sass
@@ -57,7 +57,7 @@ body, html
 				position: fixed
 				top: 0
 				height: 20%
-				background-image: linear-gradient(to top, transparent, #ffffff);
+				background-image: linear-gradient(to top, transparent, #ffffff)
 
 			.info-container
 				position: relative
